# scrapapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/endpoints/: scrape.py  tasks.py
app/core/: celery.py  config.py
app/models/: schemas.py
app/services/: scraper.py
