[project]
name = "scrapapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.115.8",
    "flower>=2.0.1",
    "lxml[html-clean]>=5.3.1",
    "newspaper4k>=0.9.3.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
lint = [
    "celery-types>=0.22.0",
]

