[project]
name = "scrapapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.115.8",
    "flower>=2.0.1",
    "lxml[html-clean]>=5.3.1",
    "newspaper4k>=0.9.3.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.1",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
lint = [
    "celery-types>=0.22.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "newspaper.*",
    "celery.*",
    "nltk.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false